<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >



<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/bp_site" />
 

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/bp_position" />
    
</LinearLayout>
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
 <EditText
     android:id="@+id/edittext_systolic"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:hint="@string/hint_systolic"
     android:inputType="phone" >

</EditText>


  <EditText
      android:id="@+id/edittext_diastolic"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/hint_diastolic"
      android:inputType="phone" >

</EditText>


    <EditText
        android:id="@+id/edittext_pulse"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pulse"
        android:inputType="phone" >

</EditText>
</LinearLayout>


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
    
      <EditText
          android:id="@+id/edittext_weight"
          android:layout_width="106dp"
          android:layout_height="wrap_content"
          android:hint="@string/hint_weight"
          android:inputType="phone" >

</EditText>

 <ToggleButton 
    android:id="@+id/togglebutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textOn="kg"
    android:textOff="lb"
    android:onClick="onToggleClicked"/>
      
  <CheckBox android:id="@+id/checkbox_arrhythmia"  
    android:text="@string/checkbox_arrhythmia"    
    android:layout_width="wrap_content"   
    android:layout_height="wrap_content"   
    />  
      
  </LinearLayout>
  

  <EditText
        android:id="@+id/edittext_comment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_comment">
   </EditText>   
      
  
  
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
  
  
  
        <Button android:id="@+id/button_picktimedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"/>
        
    <CheckBox android:id="@+id/checkbox_analysis"  
    android:text="@string/checkbox_analysis"    
    android:layout_width="wrap_content"   
    android:layout_height="wrap_content"   
    />  
    
      
      
        
        
        
    <Button
        android:id="@+id/button_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />
    
      </LinearLayout>
    
</LinearLayout>

